@@ -37,6 +37,8 @@ Version 1.3.8+svn:
    * minimum number of turns reduced to 1
    * new option to allow female leaders by default instead of male leaders
    * fixed a crash if the client recieves invalid utf-8
+   * fixed a server side bug with could cause invalid utf-8 being send to a
+     client.
  * units:
    * balancing changes:
      * created undead variations for the 'bat' and 'gryphon' race
